--- a/prototype/00-source-files/01-sass/05-modules-SASS/breadcrumb.scss
+++ b/prototype/00-source-files/01-sass/05-modules-SASS/breadcrumb.scss
@@ -2,8 +2,9 @@
 $C-nonLink: $CB-grey-dim;
 
 .breadcrumb {
-	float: left;
+	//float: left;
 	margin-top: 10px;
+
 	&__item {
 		display: inline-block;
 		vertical-align: middle;
@@ -14,7 +15,9 @@ $C-nonLink: $CB-grey-dim;
 		@include MG-icon('arrow-right',$C-nonLink,13px,$width:8px){
 			@include MG-centered(v);
 			left: 0;
+			line-height: 1;
 		};
+
 		&:first-child {
 			padding-left: 0;
 			margin-left: 0;
@@ -22,14 +25,15 @@ $C-nonLink: $CB-grey-dim;
 		}
 	}
 		&__inner {
-			&--link {
-				//
-			}
-			&--current {
-				//
-			}
-			&--home {
-			}
+		}
+		&__link {
+			//
+		}
+		&__current {
+			//
+		}
+		&__home {
+			//
 		}
 			&__icon {
 				@include MG-icon-size(20px);
