switched out "V" on select box for a css triangle

--- a/prototype/00-source-files/01-sass/04-form-elements-SASS/styledSelect.scss
+++ b/prototype/00-source-files/01-sass/04-form-elements-SASS/styledSelect.scss
@@ -34,8 +34,8 @@ select {
 
 		//add the arrow with a css triangle
 		@include MG-after {
-			//@include MG-tri(down, CG-prominence(1), 7px);
-			content: 'v';
+			@include MG-tri(down, CG-prominence(1), 7px);
+			//content: 'v';
 			font-size: 12px;
 			height: 12px;
 			width: 30px;
