$VG-common-radius and $VG-common-shadow variables and .applyCommon module added

--- a/prototype/00-source-files/01-sass/01-config-SASS/02-values-SASS/VG-values-global.scss
+++ b/prototype/00-source-files/01-sass/01-config-SASS/02-values-SASS/VG-values-global.scss
@@ -8,7 +8,8 @@ $VG-standardContent-paragraphSpacing : 30px;
 
 $VG-siteContainer-padding: 20px;
 
-$VG-commonShadow: 0 2px 5px rgba(#0f134a,0.2);
+$VG-common-shadow: 0 2px 5px rgba(#0f134a,0.2);
+$VG-common-radius: 5px;
 
 $VG-border-1: 1px solid $CG-border-1;
 $VG-border-2: 1px solid $CG-border-2;
