Fixed the TK-pageWidth class min-width

--- a/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/04-base-SASS/TK-toolkit.scss
+++ b/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/04-base-SASS/TK-toolkit.scss
@@ -123,7 +123,7 @@
 	&-inlineBlock { @include MG-inline-block; }
 
 	//Styles the element to take up the max-width of the design
-	&-pageWidth { margin:0 auto; max-width:bp('page'); min-width: bp('large'); width: 100%; display: block; }
+	&-pageWidth { margin:0 auto; max-width:bp('page'); min-width: bp('minimum'); width: 100%; display: block; }
 
 	&-weight {
 		&--light { font-weight: $light; }
