--- a/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/02-mixins-SASS/01-media-queries.scss
+++ b/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/02-mixins-SASS/01-media-queries.scss
@@ -172,7 +172,7 @@ $mediaQuery: ();
 //*********************************/
 
 $BP-mobile: bp('mobile');
-$BP-tablet: $BPG-sidebar--fullWidth;
+$BP-tablet: bp('tablet');
 
 @mixin MG-mobileOnly {
 	@include MG-mq(min, $BP-mobile){
