--- a/prototype/00-source-files/01-sass/05-modules-SASS/00-elements.scss
+++ b/prototype/00-source-files/01-sass/05-modules-SASS/00-elements.scss
@@ -75,7 +75,7 @@ body {
 	position: relative;
 	@include MG-font-size(14px);
 	line-height: 1.5;
-	font-family: $openSans;
+	font-family: $sans-serif;
 	margin: 0;
 	font-weight: $normal;
 	background-color: $CG-body-bg;
