CG-prominence >> CG-brand
I realised that prominence colors are essentially the primary brand colours of a company. "Brand" is less characters, easier to spell, and makes more sense since color prominence can vary depending on what the current page is

--- a/prototype/00-source-files/01-sass/04-form-elements-SASS/styledBrowse.scss
+++ b/prototype/00-source-files/01-sass/04-form-elements-SASS/styledBrowse.scss
@@ -29,8 +29,8 @@ $module: 'styledBrowse';
 					& + , & + .#{$module}__display-JSadded + {
 						.#{$module}__btn-JSadded {
 							//button hover state styles
-							background-color: CG-prominence(1, 'hover');
-							color:  CG-prominence(1, 'text');
+							background-color: CG-brand(1, 'hover');
+							color:  CG-brand(1, 'text');
 						}
 					}
 				}
