--- a/prototype/00-source-files/01-sass/05-modules-SASS/02-tooltip.scss
+++ b/prototype/00-source-files/01-sass/05-modules-SASS/02-tooltip.scss
@@ -5,8 +5,8 @@
 //	Holds the styles for the css tooltip
 \*================================================*/
 
-$C-background: CG-prominence(2);
-$C-text: CG-prominence(2,'text');
+$C-background: CG-brand(2);
+$C-text: CG-brand(2,'text');
 
 $V-icon-size: 10px;
 $V-transitionDuration: 0.3s;
