--- a/prototype/00-source-files/01-sass/05-modules-SASS/ZZ-SWORDION-ONLY/swordion-only.scss
+++ b/prototype/00-source-files/01-sass/05-modules-SASS/ZZ-SWORDION-ONLY/swordion-only.scss
@@ -38,7 +38,7 @@
 .animationDemoItem {
 	//border-width: 5px;
 	padding: 20px;
-	background-color: CG-prominence(1);
+	background-color: CG-brand(1);
 	color: #fff;
 	text-align: center;
 	border: 1px solid #000;
