--- a/prototype/00-source-files/01-sass/05-modules-SASS/btn.scss
+++ b/prototype/00-source-files/01-sass/05-modules-SASS/btn.scss
@@ -1,7 +1,7 @@
 .btn {
 	@include MG-font-size(14px);
-	background-color: CG-prominence(1);
-	color: CG-prominence(1, 'text');
+	background-color: CG-brand(1);
+	color: CG-brand(1, 'text');
 	@include MG-animate;
 	padding: 5px 10px;
 	display: inline-block;
@@ -10,6 +10,6 @@
 	text-align: center;
 	@include MG-hover {
 		text-decoration: none;
-		background-color: CG-prominence(1, 'hover');
+		background-color: CG-brand(1, 'hover');
 	}
 }
