--- a/prototype/00-source-files/01-sass/05-modules-SASS/skipLinks.scss
+++ b/prototype/00-source-files/01-sass/05-modules-SASS/skipLinks.scss
@@ -4,7 +4,7 @@
 		top: 0;
 		left: 0;
 		width: 100%;
-		background: CG-prominence(2);
+		background: CG-brand(2);
 		color: #fff;
 		text-decoration: underline;
 		z-index: 99999999;
