--- a/prototype/00-source-files/01-sass/05-modules-SASS/table.scss
+++ b/prototype/00-source-files/01-sass/05-modules-SASS/table.scss
@@ -24,14 +24,14 @@ table{
 		}
 		tr:first-child {
 			th {
-				background-color: CG-prominence(2);
-				background-color: rgba(CG-prominence(2), 0.95);
+				background-color: CG-brand(2);
+				background-color: rgba(CG-brand(2), 0.95);
 				color: #fff;
 			}
 		}
 		.infoTip { color: #fff; border-color: #fff;
 			@include MG-hover {
-				background-color: tint(CG-prominence(2), 20%);
+				background-color: tint(CG-brand(2), 20%);
 				background-color: rgba(#fff, 0.2);
 			}
 		}
@@ -60,8 +60,8 @@ table{
 
 .table {
 	&__heading {
-		background-color: CG-prominence(1);
-		background-color: rgba(CG-prominence(1), 0.8);
+		background-color: CG-brand(1);
+		background-color: rgba(CG-brand(1), 0.8);
 		font-weight: $bold;
 	}
 		&__subHeading {
