Removed the flexbox mixins
The mixins are no longer necessary with auto-prefixer handling flexbox prefixes

--- a/prototype/00-source-files/01-sass/05-modules-SASS/ZZ-SWORDION-ONLY/swordion-only.scss
+++ b/prototype/00-source-files/01-sass/05-modules-SASS/ZZ-SWORDION-ONLY/swordion-only.scss
@@ -109,7 +109,7 @@
 
 .navPrimary {
 	@include MG-mq(max,bp('tablet')){
-		@include MG-prefix(flex-wrap, wrap, $flexPrefixes);
+		flex-wrap: wrap;
 	}
 	&__item {
 		border-left: 1px solid #ccc;
