--- a/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/04-base-SASS/TK-toolkit.scss
+++ b/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/04-base-SASS/TK-toolkit.scss
@@ -145,8 +145,8 @@
 	}
 
 	&-flexValign {
-		@include MG-flex;
-		@include MG-flexValign;
+		display: flex;
+		align-items: center;
 	}
 
 	&-flex {
