--- a/prototype/00-source-files/01-sass/05-modules-SASS/pagination.scss
+++ b/prototype/00-source-files/01-sass/05-modules-SASS/pagination.scss
@@ -19,10 +19,12 @@ $module: 'pagination';
 		margin: 0 100px;
 	}
 		&__list {
-			@include MG-flexAlign(space-around);
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
 		}
 			&__item {
-				@include MG-flexGrow(0);
+				flex-grow: 0;
 				margin: 0!important;
 				display: block;
 				text-align: center;
