--- a/prototype/00-source-files/01-sass/04-base-SASS/00-elements.scss
+++ b/prototype/00-source-files/01-sass/04-base-SASS/00-elements.scss
@@ -76,6 +76,14 @@ body {
 	color: $CG-body-text;
 }
 
+h1, h2, h3, h4, h5, h6, p, ul, ol {
+	//margin top becomes the default paragraph spacer
+	margin-bottom: 0;
+	margin-top: 1em;
+
+	//allows body elements to sit hard up against the top border of their parent element without causing spacing issues later in the text.
+	&:first-child { margin-top: 0; }
+}
 
 /*HEADINGS*/
 h1, h2, h3, h4, h5, h6 {
@@ -100,14 +108,6 @@ h5 { @include MG-font-size(14px); text-transform: uppercase; font-style: italic;
 
 p { margin: $VG-standardContent-paragraphSpacing 0 0; }
 
-h1, h2, h3, h4, h5, h6, p, ul, ol {
-	//margin top becomes the default font spacer
-	margin-bottom: 0;
-	margin-top: 1em;
-
-	//allows body elements to sit hard up against the top border of their parent element without causing spacing issues later in the text.
-	&:first-child { margin-top: 0; }
-}
 
 a {
 	text-decoration: none;
