Created a new Pure CSS search Icon mixin

--- a/prototype/00-source-files/01-sass/05-modules-SASS/ZZ-SWORDION-ONLY/demo.scss
+++ b/prototype/00-source-files/01-sass/05-modules-SASS/ZZ-SWORDION-ONLY/demo.scss
@@ -12,6 +12,10 @@ $MQ-test-multiple:
 		max-width: 500px;
 	}
 
+	&__searchIcon {
+		@include MG-searchIcon(#000, 20px, 15px, 2px);
+	}
+
 	&__mediaQuery {
 		color: #fff;
 		@include MG-mq($MQ-test-single){
