Added a "toEye" state to the searchIcon mixin

--- a/prototype/00-source-files/01-sass/05-modules-SASS/ZZ-SWORDION-ONLY/demo.scss
+++ b/prototype/00-source-files/01-sass/05-modules-SASS/ZZ-SWORDION-ONLY/demo.scss
@@ -15,11 +15,11 @@ $MQ-test-multiple:
 	&__searchIcon {
 		@include MG-searchIcon(#000, 20px, 15px, 2px);
 		&:hover {
-			@include MG-searchIcon('hover');
+			@include MG-searchIcon('toEye');
 		}
 		&:focus {
 			outline: none;
-			@include MG-searchIcon('toCross', #000, 2px);
+			@include MG-searchIcon('toCross', #000, 5px);
 		}
 	}
 
