Improved the usability of the searchIcon mixin and removed dependency
I also removed the before-after mixin dependency so it's completely independent now and can be used outside of Swordion.

--- a/prototype/00-source-files/01-sass/05-modules-SASS/ZZ-SWORDION-ONLY/demo.scss
+++ b/prototype/00-source-files/01-sass/05-modules-SASS/ZZ-SWORDION-ONLY/demo.scss
@@ -13,7 +13,7 @@ $MQ-test-multiple:
 	}
 
 	&__searchIcon {
-		@include MG-searchIcon(#000, 20px, 15px, 2px);
+		@include MG-searchIcon(#000, 20px, 2px);
 		&:hover {
 			@include MG-searchIcon('toEye');
 		}
