searchIcon mixin improvement
It can now let you change the colour of the cross state more easily

--- a/prototype/00-source-files/01-sass/05-modules-SASS/ZZ-SWORDION-ONLY/demo.scss
+++ b/prototype/00-source-files/01-sass/05-modules-SASS/ZZ-SWORDION-ONLY/demo.scss
@@ -20,6 +20,7 @@ $MQ-test-multiple:
 		&:focus {
 			outline: none;
 			@include MG-searchIcon('toCross', #000, 5px);
+			&:hover { @include MG-searchIcon('toCross', grey, 5px); }
 		}
 	}
 
