--- a/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/02-mixins-SASS/04-css-shapes.scss
+++ b/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/02-mixins-SASS/04-css-shapes.scss
@@ -179,6 +179,7 @@
 			border-radius: 0;
 			width: $lineWidth;
 			border-width: 0;
+			border-color: transparent;
 			left: 45%;
 			height: 140%;
 			top: -15%;
