I've managed to get the system mostly working
It's working for 6 columns, has some issues when changing column counts though :/

--- a/prototype/00-source-files/01-sass/05-modules-SASS/ZZ-SWORDION-ONLY/test.scss
+++ b/prototype/00-source-files/01-sass/05-modules-SASS/ZZ-SWORDION-ONLY/test.scss
@@ -6,10 +6,14 @@
 
 .rapidTest {
 	@include MG-clearfix;
+	&__list {
+		border: 1px solid #000;
+	}
+
 	&__element {
 		height: 100px;
-		width: 100px;
-		margin: 10px;
+		//width: 100px;
+		//margin: 10px;
 		float: left;
 		background: red;
 	}
