Fixed nth-child bug

--- a/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/04-base-SASS/00-grid-base-styles.scss
+++ b/prototype/00-source-files/ZZ-Swordion-DO-NOT-EDIT/sass/04-base-SASS/00-grid-base-styles.scss
@@ -52,7 +52,7 @@ $highestColumnCount: length($grid-bp-list);
 			width: $newWidth;//*($width - $gutter) +*/
 		}
 		margin-right: $gutter;
-		&:nth-child(n + #{$colCount}) {
+		&:nth-child(#{$colCount}n) {
 			margin-right: 0;
 		}
 		&:nth-last-child(-n + #{$colCount}) {
