--- a/prototype/00-source-files/01-sass/01-config-SASS/grid-settings.scss
+++ b/prototype/00-source-files/01-sass/01-config-SASS/grid-settings.scss
@@ -12,7 +12,7 @@ $gutter-ieFallback: $CG-body-bg;
 //You can alter the available grid gutter sizes here
 //usage: class="grid grid--gutter-moduleName"
 $cellGutters: (
-	'moduleName' : 100px,///*5%,*////*20px,*/
+	'moduleName' : 5%,///*20px,*/
 	'mediaQueryFriendly' : (
 		50px, //*default*/
 		25px (max, bp('tablet')), //*affected by media query*/
