--- a/prototype/00-source-files/01-sass/01-config-SASS/grid-settings.scss
+++ b/prototype/00-source-files/01-sass/01-config-SASS/grid-settings.scss
@@ -5,14 +5,10 @@
 //	the grid class system
 //================================================*/
 
-//IE8 can't do transparent borders.
-//This defines what the default color for gutters is in IE.
-$gutter-ieFallback: $CG-body-bg;
-
 //You can alter the available grid gutter sizes here
 //usage: class="grid grid--gutter-moduleName"
 $cellGutters: (
-	'moduleName' : 5%,///*20px,*/
+	'moduleName' : 5%,///*20px,*////*both px and % based values are acceptable*/
 	'mediaQueryFriendly' : (
 		50px, //*default*/
 		25px (max, bp('tablet')), //*affected by media query*/
